# Experimental2D

./: .gitignore  CMakeLists.txt
.github/workflows/: doesItCompile.yaml
configs/: buttons.json  editorKeybinds.json  generalKeybinds.json  testKeybinds.json  window.json
src/: AssetsManager.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Observer.hpp  util.hpp
src/components/: AnimationComponent.cpp  AnimationComponent.hpp  CMakeLists.txt  EntityControlComponent.cpp  EntityControlComponent.hpp  GraphicsComponent.cpp  GraphicsComponent.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PlayerControlComponent.cpp  PlayerControlComponent.hpp
src/entities/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/gui/: Button.cpp  Button.hpp  CMakeLists.txt  Component.hpp  DropdownList.cpp  DropdownList.hpp  GuiObserver.hpp  List.cpp  List.hpp  TileTextureSelector.cpp  TileTextureSelector.hpp
src/map/: CMakeLists.txt  NormalTile.cpp  NormalTile.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
src/states/: CMakeLists.txt  EditorState.cpp  EditorState.hpp  GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  PausedState.cpp  PausedState.hpp  SettingsMenuState.cpp  SettingsMenuState.hpp  State.cpp  State.hpp
